--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="header-container">
             <div class="header-title">
                 <img src="1.png" width="85" height="85"  alt="Английская заглавная буква D черного цвета">
-                <h1>Задание №2</h1>
+                <h1>Мой сайт</h1>
             </div>
             <div class="header-menu">
                 <ul>
