--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
     <head>
             <link rel="stylesheet" href="main.css">
-            <link rel="shortcut icon" href="1.png" >
+            <link rel="shortcut icon" href="https://github.com/dasha1307/github3.io/blob/main/1.png?raw=true" >
             <title>Мой сайт</title>
             <script type="text/javascript" src="https://me.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=xSG3YhHD8Az0byShCvgvy8qd9xdD-EzAQy94l7-l-pRVE2VALwNF8Y99DXTxuydB2uOcW6wJyyfrWB05zv_x5Q" charset="UTF-8"></script>
     </head> 
@@ -14,7 +14,7 @@
     <header>
         <div class="header-container">
             <div class="header-title">
-                <img src="1.png" width="85" height="85"  alt="Английская заглавная буква D черного цвета">
+                <img src="https://github.com/dasha1307/github3.io/blob/main/1.png?raw=true" width="85" height="85"  alt="Английская заглавная буква D черного цвета">
                 <h1>Мой сайт</h1>
             </div>
             <div class="header-menu">
