--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <ol>
                             <li><a href="https://kubsu.ru">Абсолютная ссылка на сайт КУБГУ</a></li>
                             <li><a href="https://kubsu.ru">Абсолютная ссылка на сайт КУБГУ (https)</a></li>
-                            <li><a href="2.png"><img src="2.png" alt="Ссылка на изображение" style="width: 250px;" ></a></li>
+                            <li><a href="https://github.com/dasha1307/github3.io/blob/main/2.png?raw=true"><img src="https://github.com/dasha1307/github3.io/blob/main/2.png?raw=true" alt="Ссылка на изображение" style="width: 250px;" ></a></li>
                             <li><a href="internal-page.html">Сокращенная ссылка на внутреннюю страницу</a></li>
                             <li><a href="/">Сокращенная ссылка на главную страницу</a></li>
                             <li><a href="#fragment">Ссылка на фрагмент текущей страницы</a></li>
@@ -58,7 +58,7 @@
                                 <area shape="poly" alt="Закладка 4" 
                                 coords="302,27, 303,32, 394,32, 393,27, 386,9, 382,3, 375,1, 303,1, 298,2, 293,6, 295,9, 302,27" 
                                 href="4.html">
-                                    <img src="img/2.png" usemap="#shapes" alt="цветок" style="width: 250px;" >
+                                    <img src="https://github.com/dasha1307/github3.io/blob/main/2.png?raw=true" usemap="#shapes" alt="цветок" style="width: 250px;" >
                                 </map></li>
                             <li><a href="">Ссылка с пустым href</a></li>
                             <li><a>Ссылка без href</a></li>
