--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
     <head>
             <link rel="stylesheet" href="main.css">
-            <link rel="shortcut icon" url("https://github.com/dasha1307/github3.io/blob/main/1.png?raw=true") >
+            <link rel="shortcut icon" href="img/1.png" >
             <title>Мой сайт</title>
             <script type="text/javascript" src="https://me.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=xSG3YhHD8Az0byShCvgvy8qd9xdD-EzAQy94l7-l-pRVE2VALwNF8Y99DXTxuydB2uOcW6wJyyfrWB05zv_x5Q" charset="UTF-8"></script>
     </head> 
@@ -14,7 +14,7 @@
     <header>
         <div class="header-container">
             <div class="header-title">
-                <img url(https://github.com/dasha1307/github3.io/blob/main/1.png?raw=true") width="85" height="85"  alt="Английская заглавная буква D черного цвета">
+                <img src="img/1.png" width="85" height="85"  alt="Английская заглавная буква D черного цвета">
                 <h1>Мой сайт</h1>
             </div>
             <div class="header-menu">
@@ -36,7 +36,7 @@
                         <ol>
                             <li><a href="https://kubsu.ru">Абсолютная ссылка на сайт КУБГУ</a></li>
                             <li><a href="https://kubsu.ru">Абсолютная ссылка на сайт КУБГУ (https)</a></li>
-                            <li><a href="https://github.com/dasha1307/github3.io/blob/main/2.png?raw=true"><img url("https://github.com/dasha1307/github3.io/blob/main/2.png?raw=true") alt="Ссылка на изображение" style="width: 250px;" ></a></li>
+                            <li><a href="image/2.png"><img src="image/2.png"> alt="Ссылка на изображение" style="width: 250px;" ></a></li>
                             <li><a href="internal-page.html">Сокращенная ссылка на внутреннюю страницу</a></li>
                             <li><a href="/">Сокращенная ссылка на главную страницу</a></li>
                             <li><a href="#fragment">Ссылка на фрагмент текущей страницы</a></li>
@@ -58,7 +58,7 @@
                                 <area shape="poly" alt="Закладка 4" 
                                 coords="302,27, 303,32, 394,32, 393,27, 386,9, 382,3, 375,1, 303,1, 298,2, 293,6, 295,9, 302,27" 
                                 href="4.html">
-                                    <img src="https://github.com/dasha1307/github3.io/blob/main/2.png?raw=true" usemap="#shapes" alt="цветок" style="width: 250px;" >
+                                    <img src="img/2.png" usemap="#shapes" alt="цветок" style="width: 250px;" >
                                 </map></li>
                             <li><a href="">Ссылка с пустым href</a></li>
                             <li><a>Ссылка без href</a></li>
