--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <html>
     <head>
+        <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="main.css">
             <link rel="shortcut icon" href="img/1.png" >
             <title>Мой сайт</title>
